# local_bank_agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KULLANIM_TALIMATLARI.md  LICENSE  Makefile  QUICK_START.md  README.md  clean_project.py  coqui_tts_server.py  deneme.txt  docker-compose.yml  pyproject.toml  requirements.txt  web_server.py
.github/workflows/: ci-cd.yml
application/: langchain_agent.py  prompts.py  prompts.yaml  tools_registry.py
core/: agent_cache.py  auth_middleware.py  config.py  error_handler.py  exceptions.py  logger.py  metrics.py  security.py  session_manager.py  session_manager_persistent.py  tc_kimlik_validator.py
domain/: entities.py  interfaces.py
infrastructure/: llm_router.py  mock_services.py  stt_engine.py  tts_engine.py
models/: coqui_reference.wav.txt
routes/: __init__.py
routes/v1/: __init__.py  audio.py  auth.py  health.py  models.py
services/: __init__.py  audio_processor.py
templates/: index.html  logs.html
tests/: __init__.py  conftest.py  test_async_audio_processor.py  test_auth_middleware.py  test_config.py  test_coqui_integration.py  test_exceptions.py  test_extended_tools.py  test_llm_router.py  test_mock_services.py  test_prompts.py  test_security.py  test_security_extended.py  test_session_manager.py  test_tools_registry.py  test_tts_engine.py
tests/load/: __init__.py  test_load_audio_processing.py
